--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;1,300&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200,300;0,400;0,700;1,300&display=swap"
           rel="stylesheet">
     <title>Portfolio</title>
     <meta name="viewport" content="width-device-width, initial-scale=1">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/blocks/style.css">
 </head>
 <body>
+<!-- header -->
 <header class="header">
     <div class="container">
         <div class="header__inner">
@@ -30,10 +31,50 @@
                 <a class="nav__link" href="#">about me</a>
                 <a class="nav__link" href="#">block</a>
                 <a class="nav__link" href="#">contact</a>
-                <a class="nav__link" href="#">hire me</a>
+                <a class="nav__link nav__link--btn" href="#">hire me</a>
             </div>
         </div>
     </div>
 </header>
+
+<!-- intro -->
+<section class="intro">
+    <div class="container">
+        <div class="intro__inner">
+            <div class="intro__content">
+                <h2 class="intro__subtitle">Hello i'm</h2>
+                <h1 class="intro__title">Lewis Nathaniel</h1>
+                <div class="intro__text">UI &amp; UX Designer</div>
+
+                <div class="social">
+                    <a href="#" class="social__link">
+                        <img src="imgages/behance.svg" alt="">
+                    </a>
+                    <a href="#" class="social__link">
+                        <img src="imgages/dribbble.svg" alt="">
+                    </a>
+                    <a href="#" class="social__link">
+                        <img src="imgages/facebook.svg" alt="">
+                    </a>
+                    <a href="#" class="social__link">
+                        <img src="imgages/in.svg" alt="">
+                    </a>
+                    <a href="#" class="social__link">
+                        <img src="imgages/instagram.svg" alt="">
+                    </a>
+                    <a href="#" class="social__link">
+                        <img src="imgages/twitter.svg" alt="">
+                    </a>
+                </div>
+
+                <a class="btn" href="#">HIRE ME</a>
+                <button class="btn" type="button">SEE MY RESUME</button>
+            </div>
+            <div class="intro__photo">
+                <img src="imgages/photo.png" alt="photo">
+            </div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
